# orenburg

./: .env-dev  .gitignore  README.md  docker-compose.yml  hackaton_project.pptx
alembic/: env.py
src/backend/: Dockerfile  README.md  alembic.ini  config.py  database.py  main.py  requirements.txt  start.sh
src/backend/.docker/: start.sh
src/backend/alembic/: env.py
src/backend/products/: __init__.py  constants.py  dependencies.py  models.py  router.py  schemas.py  service.py
src/backend/users/: __init__.py  constants.py  dependencies.py  models.py  router.py  schemas.py  service.py
src/queue/: index.py  queue_msgs.py
src/server/: Dockerfile  README.md  db.sqlite3  migrate.sh  requirements.txt  start.sh
src/server/api/: urls.py
src/server/apps/: urls.py
src/server/server/: settings.py  (+1 more)
src/tg/: Dockerfile  bot.py  pyproject.toml  requirements.txt
src/tg/api_data/: config.py  register_user.py  verification.py
src/tg/api_data/client/: confirm_recieving.py
src/tg/api_data/courier/: cancel_order.py  change_order_state.py  change_user_state.py  get_courier_data.py  get_orders_queue_data.py  order_confirmation.py
src/tg/filters/: pin_filter.py
src/tg/handlers/: start_handler.py
src/tg/handlers/client/: confirm_receiving.py  rating_handler.py
src/tg/handlers/courier/: cancel_order_handler.py  courier_profile_handler.py  order_handler.py  send_order_handler.py  state_handler.py
src/tg/keyboards/courier/: choice_kb.py  incoming_order_kb.py  main_menu_kb.py  profile_kb.py  rating_kb.py  validation_kb.py
src/tg/middlewares/: chat_action.py
(+53 files in other folders)
